--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,7 @@
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+StructuredLight = "13204c95-a6e5-4c09-8c7b-ee09b09e0944"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
